# MACOS-TIC2003

./: CMakeLists.txt  Readme.md
src/autotester/src/: TestWrapper.cpp
src/spa/: CMakeLists.txt
src/spa/src/: ControlFlowGraph.cpp  Database.cpp  Database.h  SourceProcessor.cpp  SourceProcessor.h  Tokenizer.cpp
src/spa/src/db/: Database.cpp  Database.h
src/spa/src/pql/: HandleMultipleConditions.cpp  HandleMultipleConditions.h  HandleMultipleSelect.cpp  HandleMultipleSelect.h  HandleSimpleQueries.cpp  HandleSimpleQueries.h  Query.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryParser.cpp  QueryParser.h  QueryProcessor.cpp  QueryProcessor.h
src/spa/src/simple/: AncestorProcessing.cpp  AncestorProcessing.h  CallsProcessing.cpp  CallsProcessing.h  ExpressionProcessing.h  ModifiesProcessing.cpp  ModifiesProcessing.h  ProcedureProcessing.cpp  ProcedureProcessing.h  ProcessConstant.h  SourceProcessor.cpp  SourceProcessor.h  StatementInfo.h  StatementProcessing.cpp  StatementProcessing.h  TokenProcessing.cpp  TokenProcessing.h  UsesProcessing.cpp  UsesProcessing.h  VariableProcessing.h
src/spa/src/utils/: StringUtil.cpp  StringUtil.h
src/unit_testing/: CMakeLists.txt
src/unit_testing/src/: TestDatabase.cpp  TestQueryEvaluator.cpp  TestQueryParser.cpp  TestQueryProcessor.cpp  TestSourceProcessor.cpp  TestTokenzier.cpp
src/unit_testing/testfile/: test.txt
tests/: Sample_queries.txt  Sample_source.txt  database.db  output.xml
